--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 	<build>
 		<plugins>
 			<plugin>
-				<artifactId>maven.compiler.plugin</artifactId>
+				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.1</version>
 				<configuration>
 					<source>1.6</source>
