--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,9 @@
 	<artifactId>DesignModule</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 
-
+	<properties>
+		<spring.version>3.1.2.RELEASE</spring.version>
+	</properties>
 
 
 	<build>
@@ -41,6 +43,21 @@
 			<groupId>commons-pool</groupId>
 			<artifactId>commons-pool</artifactId>
 			<version>1.6</version>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-log4j12</artifactId>
+			<version>1.7.5</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-jdbc</artifactId>
+			<version>${spring.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.mchange</groupId>
+			<artifactId>c3p0</artifactId>
+			<version>0.9.5.1</version>
 		</dependency>
 	</dependencies>
 
